[project]
name = "linnaeus-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Jornand de Buisonjé",email = "Jornand.deBuisonje@uwv.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio (>=5.34.0,<6.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "openai (>=1.93.0,<2.0.0)",
    "mistralai (>=1.8.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "linnaeus_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
